--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,8 @@
 }
 
 body {
-  padding: 50px;
+  margin: 0;
+  padding: 0;
   background-color: var(--umber);
 }
 
@@ -38,4 +39,24 @@ table td {
   padding: 0.5rem;
   border: 1px solid var(--rhythm);
   text-align: center;
+}
+
+.navbar {
+  background-color: var(--alice-blue);
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 5%;
+}
+
+.navbar--links {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.navbar--links a {
+  align-self: center;
 }
