--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,9 +9,13 @@
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+}
+
 body {
-  margin: 1vw;
-  padding: 0;
+  margin: 2%;
+  padding: 2%;
   background-color: var(--alice-blue);
 }
 
@@ -47,6 +51,7 @@ table td {
   bottom: 0;
   width: 100%;
   height: 5%;
+  overflow: hidden;
 }
 
 .navbar--links {
@@ -67,6 +72,10 @@ table td {
 }
 .navbar--links img {
   height: 2rem;
+}
+#newrecipe {
+  align-self: center;
+  height: 3rem;
 }
 #active {
   color: var(--umber);
