--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,11 @@ body {
   margin: 2%;
   padding: 2%;
   background-color: var(--alice-blue);
+  overflow-x: hidden;
+}
+
+p {
+  text-align: center;
 }
 
 h1 {
@@ -39,6 +44,7 @@ table {
 table th {
   padding: 1rem;
   border: 2px solid var(--rhythm);
+  text-align: center;
 }
 
 table td {
@@ -105,10 +111,11 @@ table td {
   display: flex;
   width: 100%;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   flex-wrap: wrap;
   text-align: center;
   text-decoration: none;
+  padding: 3rem;
 }
 
 .links a {
@@ -120,9 +127,26 @@ table td {
   height: 20rem;
   width: 20rem;
   border-radius: 50%;
-  padding: 3rem;
+  padding: 2rem;
 }
 
-p {
-  text-align: center;
+#grinderTable {
+  visibility: hidden;
+}
+/* Search box/button */
+#searchArea {
+  display: flex;
+  justify-content: center;
+}
+
+#searchButton {
+  margin-left: 0.5%;
+  height: 1%;
+  border-radius: 50%;
+  background: transparent;
+  border: transparent;
+}
+#searchBox {
+  height: 1%;
+  margin-bottom: 1%;
 }
