Add create recipe page and form validation

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -63,6 +63,10 @@ table td {
   width: 100%;
   height: 7%;
   overflow: hidden;
+  box-sizing: border-box;
+  border-top: solid var(--rich-black-fogra-29) 1px;
+  padding-left: -4%;
+  margin-left: -4%;
 }
 
 .navbar--links {
@@ -171,4 +175,31 @@ table td {
   border-radius: 2rem;
   width: 20%;
   text-align: center;
+}
+
+/* Form styling */
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+
+form input {
+  margin: 0.5%;
+}
+
+form select {
+  margin: 0.5%;
+}
+
+form textarea {
+  margin: 0.5%;
+}
+input:invalid {
+  border: 1px dashed red;
+}
+input:valid {
+  border: 1px solid var(--rich-black-fogra-29);
 }
