--- a/src/App/App.css
+++ b/src/App/App.css
@@ -178,7 +178,7 @@ table td {
 }
 
 /* Form styling */
-form {
+#form {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -186,15 +186,15 @@ form {
   align-items: center;
 }
 
-form input {
+input {
   margin: 0.5%;
 }
 
-form select {
+select {
   margin: 0.5%;
 }
 
-form textarea {
+textarea {
   margin: 0.5%;
 }
 input:invalid {
