--- a/styles/globals.css
+++ b/styles/globals.css
@@ -74,6 +74,7 @@ table td {
   height: 100%;
   display: flex;
   justify-content: space-around;
+  align-items: center;
 }
 
 .navbar--links a {
@@ -81,9 +82,14 @@ table td {
   color: var(--rich-black-fogra-29);
   font-size: 2rem;
 }
-.navbar--links span {
+.navbar--links > a {
   align-self: center;
   font-size: 2rem;
+  height: 2rem;
+}
+
+.navbar--links a span {
+  height: 2rem;
 }
 
 .navbar--links svg {
@@ -99,7 +105,7 @@ table td {
 }
 .active * {
   color: var(--umber);
-  stroke: var(--umber);
+  /* stroke: var(--umber); */
   fill: var(--umber);
 }
 /* Header and logo styling */
