--- a/styles/globals.css
+++ b/styles/globals.css
@@ -117,14 +117,23 @@ table td {
   width: 100%;
   height: 12rem;
 }
+.topLeft {
+  min-width: 20%;
+  min-height: 100%;
+}
+.topMiddle {
+  text-align: center;
+  min-width: 60%;
+  min-height: 100%;
+}
+.topRight {
+  min-width: 20%;
+  min-height: 100%;
+}
 #logo {
   margin: 1vw !important;
   height: 10rem !important;
   border-radius: 50% !important;
-}
-.top h1 {
-  align-self: center;
-  margin-right: 20rem;
 }
 
 /* Homepage links */
